Fixed some spacing issues.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  margin: auto;
+  margin: 2px auto;
   max-width: 500px;
   display: flex;
   flex-direction: column;  
@@ -16,12 +16,18 @@ body {
 
 .dashboard-content {
   margin: 8px;
-  padding: 6px 6px 10px;
+  padding: 6px 6px 10px 6px;
   height: 40vh;
   background: cyan;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+} 
+
+.title-content, .scroll-content {
+  margin: 2px auto;
+  width: 98%;
+  background: lightgreen;
 } 
 
 .title-content {
@@ -103,12 +109,6 @@ p.caption-header {
 .caption-details {
   font-variant: small-caps;
 }
-
-.title-content, .scroll-content {
-  width: 490px;
-  background: lightgreen;
-
-} 
 
 .listen, .home-details, .avatar-button {
   background: azure;
